fix spacing in progress bar and spinner

--- a/www/src/css/examples.scss
+++ b/www/src/css/examples.scss
@@ -9,7 +9,12 @@
     margin: 0.25rem 0.25rem;
   }
 
-  .progress{
+  .progress {
+    margin: 0.25rem;
+  }
+
+  > .spinner-border,
+  > .spinner-grow {
     margin: 0.25rem 0.25rem;
   }
 
